Improve and fix after OH3 port
Signed-off-by: Anders Alfredsson <andersb86@gmail.com>
(cherry picked from commit 179c4b459722c9ce7a9a7a2971945b5eeac2c1e2)